# syco12

./: .eleventy.js  .gitignore  README.md  index.html  package.json  pictures.html  pyproject.toml
.github/workflows/: deploy.yml
data/: areas.yaml  attendees.yaml  dates.yaml  events.yaml  helpers.yaml  invited.yaml  organising.yaml  people.yaml  previous.yaml  programme.yaml  schedule.yaml  steering.yaml  talks.yaml
scripts/: attendees.py  badges.py  badges.tex  structs.py
static/: styles.css
